// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should parse sample file 0 1`] = `
{
  "balance": {
    "new": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "extension_zone": "",
        "number": "138536152215",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 17832.12,
      "date": 2017-10-11T00:00:00.000Z,
      "link_code": "0",
      "record_identification": "8",
      "sequence_number": "139",
    },
    "old": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "description": "KBC-Bedrijfsrekening",
        "extension_zone": "",
        "name": "BOUWBEDRIJF VOOR GROTE WER",
        "number": "138536152215",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 17752120,
      "coda_sequence_number": "138",
      "date": 2017-10-10T00:00:00.000Z,
      "record_identification": "1",
      "sequence_number": "139",
    },
  },
  "free_communications": [],
  "header": {
    "account": {
      "bic": "KREDBEBB",
      "identification_number": "00330158420",
      "name": "BOUWBEDRIJF VOOR GROTE WER",
    },
    "application_code": "05",
    "bank_identification_number": "725",
    "date": 2017-10-11T00:00:00.000Z,
    "duplicate": false,
    "external_application_code": "00000",
    "file_reference": "00265207  ",
    "record_identification": "0",
    "related_reference": "",
    "transaction_reference": "",
    "version": 2,
  },
  "information": [],
  "movements": [
    {
      "amount": 5,
      "article_code": "3",
      "bic": "KREDBEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "000003505158",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "BE22313215646432",
        },
        "name": "KLANT1 MET NAAM1",
      },
      "customer_reference": "",
      "detail_sequence": "0000",
      "entry_date": 2017-10-11T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "2",
          "communication": {
            "address": "GROTE WEG 32",
            "identification_code": "",
            "locality": "3215 HASSELT",
            "name": "KLANT1 MET NAAM1",
          },
          "communication_type": "structured",
          "detail_sequence": "0001",
          "record_identification": "3",
          "reference_number": "JRFC00120DSCCOCACAERT",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "50",
            "transaction_description": "Transfer in your favour",
            "type": "0",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "JRFC00120DSCCOCACAERT",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "50",
        "transaction_description": "Transfer in your favour",
        "type": "0",
      },
      "value_date": 2017-10-11T00:00:00.000Z,
    },
    {
      "amount": 25,
      "article_code": "3",
      "bic": "BBRUBEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "000003515846",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "BE25646548413215",
        },
        "name": "KLANT2 NAAM2",
      },
      "customer_reference": "",
      "detail_sequence": "0000",
      "entry_date": 2017-10-11T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "2",
          "communication": {
            "address": "VOETGANGERSTRAAT 26",
            "identification_code": "",
            "locality": "1215 ANTWERPEN",
            "name": "KLANT2 NAAM2",
          },
          "communication_type": "structured",
          "detail_sequence": "0001",
          "record_identification": "3",
          "reference_number": "KLIM03284DSCICDEVATVA",
          "sequence": "0002",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "50",
            "transaction_description": "Transfer in your favour",
            "type": "0",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "KLIM03284DSCICDEVATVA",
      "sequence": "0002",
      "sequence_number": "0002",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "50",
        "transaction_description": "Transfer in your favour",
        "type": "0",
      },
      "value_date": 2017-10-11T00:00:00.000Z,
    },
    {
      "amount": 20,
      "article_code": "3",
      "bic": "KREDBEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "000003154982",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "BE32135468465432",
        },
        "name": "KLANT3 NAAM3",
      },
      "customer_reference": "",
      "detail_sequence": "0000",
      "entry_date": 2017-10-11T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "2",
          "communication": {
            "address": "KLEIN WEGELKEN 1",
            "identification_code": "",
            "locality": "8423 LEUVEN",
            "name": "KLANT3 NAAM3",
          },
          "communication_type": "structured",
          "detail_sequence": "0001",
          "record_identification": "3",
          "reference_number": "OL69IXSTASSCCOXSOVDGS",
          "sequence": "0003",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "50",
            "transaction_description": "Transfer in your favour",
            "type": "0",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "OL69IXSTASSCCOXSOVDGS",
      "sequence": "0003",
      "sequence_number": "0003",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "50",
        "transaction_description": "Transfer in your favour",
        "type": "0",
      },
      "value_date": 2017-10-11T00:00:00.000Z,
    },
    {
      "amount": 30,
      "article_code": "3",
      "bic": "GEBABEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "000002133131",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "BE23156453132168",
        },
        "name": "KLANT4 - NAAM4 MET",
      },
      "customer_reference": "",
      "detail_sequence": "0000",
      "entry_date": 2017-10-11T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "2",
          "communication": {
            "address": "EIKENSTRAAT 25",
            "identification_code": "",
            "locality": "2141 BRUGGE",
            "name": "KLANT4 - NAAM4 MET",
          },
          "communication_type": "structured",
          "detail_sequence": "0001",
          "record_identification": "3",
          "reference_number": "KACS00321DSCTIXEIKDVA",
          "sequence": "0004",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "50",
            "transaction_description": "Transfer in your favour",
            "type": "0",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "KACS00321DSCTIXEIKDVA",
      "sequence": "0004",
      "sequence_number": "0004",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "50",
        "transaction_description": "Transfer in your favour",
        "type": "0",
      },
      "value_date": 2017-10-11T00:00:00.000Z,
    },
  ],
  "trailer": {
    "credit_amount": 80,
    "debit_amount": 0,
    "number_of_records": 22,
    "record_identification": "9",
  },
}
`;

exports[`should parse sample file 1 1`] = `
{
  "balance": {
    "new": {
      "account": {
        "currency": "EUR",
        "number": "BE82363072326068",
        "type": 2,
        "type_description": "IBAN of the Belgian account number",
      },
      "balance": 23154.685,
      "date": 2015-11-18T00:00:00.000Z,
      "link_code": "0",
      "record_identification": "8",
      "sequence_number": "074",
    },
    "old": {
      "account": {
        "currency": "EUR",
        "description": "Zichtrekening",
        "name": "SOME COMPANY",
        "number": "BE62354872126588",
        "type": 2,
        "type_description": "IBAN of the Belgian account number",
      },
      "balance": 25846000,
      "coda_sequence_number": "074",
      "date": 2022-01-23T00:00:00.000Z,
      "record_identification": "1",
      "sequence_number": "074",
    },
  },
  "free_communications": [],
  "header": {
    "account": {
      "bic": "BBRUBEBB",
      "identification_number": "01568365271",
      "name": "SOME RANDOM COMPANY",
    },
    "application_code": "05",
    "bank_identification_number": "300",
    "date": 2017-07-03T00:00:00.000Z,
    "duplicate": false,
    "external_application_code": "00000",
    "file_reference": "55324204  ",
    "record_identification": "0",
    "related_reference": "",
    "transaction_reference": "",
    "version": 2,
  },
  "information": [],
  "movements": [
    {
      "amount": -9.68,
      "article_code": "2",
      "bic": "",
      "category_purpose": "",
      "communication": "Zichtrekening nr 21354598 - 2,11Justification in annex",
      "communication_type": "unstructured",
      "customer_reference": "",
      "detail_sequence": "0000",
      "entry_date": 2017-07-03T00:00:00.000Z,
      "globalisation_code": "1",
      "information": [
        {
          "article_code": "1",
          "communication": "INVOICE n 2011/02/000254882 du 30/06/2011 ING Belgique SA - Avenue Marni",
          "communication_type": "unstructured",
          "detail_sequence": "0003",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "x 24, B-1000 Bruxelles TVA BE 0125.125.311 - BIC (SWIFT): BBRUBEBB - IBAN",
          "communication_type": "unstructured",
          "detail_sequence": "0004",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": ": BE45 1254 3254 1254 COMPANY SPRL BD SOME DATA ANONYM, B-1000 BRUSSEL TV",
          "communication_type": "unstructured",
          "detail_sequence": "0005",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "A BE 0215.215.154 Zichtrekening van 30/06/2011 nr 25154842 Zakelijke r",
          "communication_type": "unstructured",
          "detail_sequence": "0006",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "ekeningING Plus BE12 3215 1548 2121 EUR Compte - vue BE25 3215 2158 2315",
          "communication_type": "unstructured",
          "detail_sequence": "0007",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "EUR Maandelijkse kost rapportering (BE) - 2,1100 EUR (1) Reference : 1",
          "communication_type": "unstructured",
          "detail_sequence": "0008",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "23-1548542-21 -------------------------------------------------- TVA 21 %",
          "communication_type": "unstructured",
          "detail_sequence": "0009",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "sur : - 2,1100 (1) - 0,11 EUR Total au debit du compte BE15 2315 2135 21",
          "communication_type": "unstructured",
          "detail_sequence": "0010",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "11 : - 3,22 EUR",
          "communication_type": "unstructured",
          "detail_sequence": "0011",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "3403076534383000143",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "35",
        "family_description": "Closing (periodical settlements for interest, costs, ...)",
        "transaction": "37",
        "transaction_description": "Costs",
        "type": "3",
      },
      "value_date": 2017-06-30T00:00:00.000Z,
    },
    {
      "amount": -8,
      "article_code": "1",
      "communication": "",
      "communication_type": "unstructured",
      "detail_sequence": "0001",
      "entry_date": 2017-07-03T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "1",
          "communication": "INVOICE n 2011/02/000254882 du 30/06/2011 ING Belgique SA - Avenue Marni",
          "communication_type": "unstructured",
          "detail_sequence": "0003",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "x 24, B-1000 Bruxelles TVA BE 0125.125.311 - BIC (SWIFT): BBRUBEBB - IBAN",
          "communication_type": "unstructured",
          "detail_sequence": "0004",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": ": BE45 1254 3254 1254 COMPANY SPRL BD SOME DATA ANONYM, B-1000 BRUSSEL TV",
          "communication_type": "unstructured",
          "detail_sequence": "0005",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "A BE 0215.215.154 Zichtrekening van 30/06/2011 nr 25154842 Zakelijke r",
          "communication_type": "unstructured",
          "detail_sequence": "0006",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "ekeningING Plus BE12 3215 1548 2121 EUR Compte - vue BE25 3215 2158 2315",
          "communication_type": "unstructured",
          "detail_sequence": "0007",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "EUR Maandelijkse kost rapportering (BE) - 2,1100 EUR (1) Reference : 1",
          "communication_type": "unstructured",
          "detail_sequence": "0008",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "23-1548542-21 -------------------------------------------------- TVA 21 %",
          "communication_type": "unstructured",
          "detail_sequence": "0009",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "sur : - 2,1100 (1) - 0,11 EUR Total au debit du compte BE15 2315 2135 21",
          "communication_type": "unstructured",
          "detail_sequence": "0010",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "11 : - 3,22 EUR",
          "communication_type": "unstructured",
          "detail_sequence": "0011",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
      ],
      "record_identification": "2",
      "reference_number": "3403076534383000143",
      "sequence": "0001",
      "sequence_number": "074",
      "transaction_code": {
        "category": "100",
        "category_description": "Gross amount",
        "family": "35",
        "family_description": "Closing (periodical settlements for interest, costs, ...)",
        "transaction": "37",
        "transaction_description": "Costs",
        "type": "8",
      },
      "value_date": 2017-06-30T00:00:00.000Z,
    },
    {
      "amount": -1.68,
      "article_code": "2",
      "bic": "",
      "category_purpose": "",
      "communication": {
        "amount": 8,
        "equivalent_currency_account": 1.68,
        "equivalent_eur": 1.68,
        "minimum": false,
        "percent": 21,
        "type": 106,
        "type_description": "Method of calculation (VAT, withholding tax on income, commission, etc.)",
      },
      "communication_type": "structured",
      "customer_reference": "",
      "detail_sequence": "0002",
      "entry_date": 2017-07-03T00:00:00.000Z,
      "globalisation_code": "1",
      "information": [
        {
          "article_code": "1",
          "communication": "INVOICE n 2011/02/000254882 du 30/06/2011 ING Belgique SA - Avenue Marni",
          "communication_type": "unstructured",
          "detail_sequence": "0003",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "x 24, B-1000 Bruxelles TVA BE 0125.125.311 - BIC (SWIFT): BBRUBEBB - IBAN",
          "communication_type": "unstructured",
          "detail_sequence": "0004",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": ": BE45 1254 3254 1254 COMPANY SPRL BD SOME DATA ANONYM, B-1000 BRUSSEL TV",
          "communication_type": "unstructured",
          "detail_sequence": "0005",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "A BE 0215.215.154 Zichtrekening van 30/06/2011 nr 25154842 Zakelijke r",
          "communication_type": "unstructured",
          "detail_sequence": "0006",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "ekeningING Plus BE12 3215 1548 2121 EUR Compte - vue BE25 3215 2158 2315",
          "communication_type": "unstructured",
          "detail_sequence": "0007",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "EUR Maandelijkse kost rapportering (BE) - 2,1100 EUR (1) Reference : 1",
          "communication_type": "unstructured",
          "detail_sequence": "0008",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "23-1548542-21 -------------------------------------------------- TVA 21 %",
          "communication_type": "unstructured",
          "detail_sequence": "0009",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "sur : - 2,1100 (1) - 0,11 EUR Total au debit du compte BE15 2315 2135 21",
          "communication_type": "unstructured",
          "detail_sequence": "0010",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
        {
          "article_code": "1",
          "communication": "11 : - 3,22 EUR",
          "communication_type": "unstructured",
          "detail_sequence": "0011",
          "record_identification": "3",
          "reference_number": "3403076534383000143",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "35",
            "family_description": "Closing (periodical settlements for interest, costs, ...)",
            "transaction": "37",
            "transaction_description": "Costs",
            "type": "3",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "3403076534383000143",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "011",
        "category_description": "VAT",
        "family": "35",
        "family_description": "Closing (periodical settlements for interest, costs, ...)",
        "transaction": "37",
        "transaction_description": "Costs",
        "type": "8",
      },
      "value_date": 2017-06-30T00:00:00.000Z,
    },
  ],
  "trailer": {
    "credit_amount": 0,
    "debit_amount": 9.68,
    "number_of_records": 16,
    "record_identification": "9",
  },
}
`;

exports[`should parse sample file 2 1`] = `
{
  "balance": {
    "new": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "extension_zone": "",
        "number": "732038134791",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 99999.99,
      "date": 2017-10-30T00:00:00.000Z,
      "link_code": "0",
      "record_identification": "8",
      "sequence_number": "103",
    },
    "old": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "description": "Compte Business One CBC",
        "extension_zone": "",
        "name": "TIX02 SPRL",
        "number": "732XXXXXXXXX",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 99999990,
      "coda_sequence_number": "103",
      "date": 2017-10-26T00:00:00.000Z,
      "record_identification": "1",
      "sequence_number": "103",
    },
  },
  "free_communications": [],
  "header": {
    "account": {
      "bic": "CREGBEBB",
      "identification_number": " 0064449670",
      "name": "LASTNAME FIRSTNAME",
    },
    "application_code": "05",
    "bank_identification_number": "190",
    "date": 2017-10-30T00:00:00.000Z,
    "duplicate": false,
    "external_application_code": " 0000",
    "file_reference": "00411737  ",
    "record_identification": "0",
    "related_reference": "",
    "transaction_reference": "0",
    "version": 2,
  },
  "information": [],
  "movements": [
    {
      "amount": -812.69,
      "article_code": "3",
      "communication": "Message goes here",
      "communication_type": "unstructured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "XXXXXXXXXXXX",
        },
        "name": "",
      },
      "detail_sequence": "0000",
      "entry_date": 2017-10-30T00:00:00.000Z,
      "globalisation_code": "1",
      "record_identification": "2",
      "reference_number": "PSUF00968 TK4TBNINNIG",
      "sequence": "0001",
      "sequence_number": "103",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "13",
        "family_description": "Credit",
        "transaction": "01",
        "transaction_description": "Short-term loan",
        "type": "3",
      },
      "value_date": 2017-10-30T00:00:00.000Z,
    },
    {
      "amount": -805.73,
      "article_code": "1",
      "communication": "and continues here",
      "communication_type": "unstructured",
      "detail_sequence": "0001",
      "entry_date": 2017-10-30T00:00:00.000Z,
      "globalisation_code": "0",
      "record_identification": "2",
      "reference_number": "PSUF00968 TK4TBNINNIG",
      "sequence": "0001",
      "sequence_number": "103",
      "transaction_code": {
        "category": "055",
        "category_description": "Repayment loan or credit capital",
        "family": "13",
        "family_description": "Credit",
        "transaction": "01",
        "transaction_description": "Short-term loan",
        "type": "8",
      },
      "value_date": 2017-10-30T00:00:00.000Z,
    },
    {
      "amount": -6.96,
      "article_code": "1",
      "communication": "or here",
      "communication_type": "unstructured",
      "detail_sequence": "0002",
      "entry_date": 2017-10-30T00:00:00.000Z,
      "globalisation_code": "1",
      "record_identification": "2",
      "reference_number": "PSUF00968 TK4TBNINNIG",
      "sequence": "0001",
      "sequence_number": "103",
      "transaction_code": {
        "category": "002",
        "category_description": "Interest paid",
        "family": "13",
        "family_description": "Credit",
        "transaction": "01",
        "transaction_description": "Short-term loan",
        "type": "8",
      },
      "value_date": 2017-10-30T00:00:00.000Z,
    },
  ],
  "trailer": {
    "credit_amount": 163.35,
    "debit_amount": 859.09,
    "number_of_records": 16,
    "record_identification": "9",
  },
}
`;

exports[`should parse sample file 3 1`] = `
{
  "balance": {
    "new": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "extension_zone": "",
        "number": "001548226815",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": -500012.1,
      "date": 2015-05-12T00:00:00.000Z,
      "link_code": "0",
      "record_identification": "8",
      "sequence_number": "225",
    },
    "old": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "description": "PROFESSIONAL ACCOUNT",
        "extension_zone": "",
        "name": "CODELICIOUS",
        "number": "001548226815",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 4004100,
      "coda_sequence_number": "255",
      "date": 2014-12-24T00:00:00.000Z,
      "record_identification": "1",
      "sequence_number": "155",
    },
  },
  "free_communications": [],
  "header": {
    "account": {
      "bic": "GEBABEBB",
      "identification_number": "09029308273",
      "name": "CODELICIOUS",
    },
    "application_code": "05",
    "bank_identification_number": "201",
    "date": 2015-01-18T00:00:00.000Z,
    "duplicate": false,
    "external_application_code": "00001",
    "file_reference": "0938409934",
    "record_identification": "0",
    "related_reference": "834080",
    "transaction_reference": "984309",
    "version": 2,
  },
  "information": [
    {
      "article_code": "2",
      "communication": {
        "address": "MAIN STREET 928",
        "identification_code": "",
        "locality": "5480 SOME CITY",
        "name": "BVBA.BAKKER PIET",
      },
      "communication_type": "structured",
      "detail_sequence": "0001",
      "record_identification": "3",
      "reference_number": "0007500005482",
      "sequence": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "04",
        "family_description": "Cards",
        "transaction": "80",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
    },
    {
      "article_code": "3",
      "communication": "SOME INFORMATION ABOUT THIS TRANSACTION",
      "detail_sequence": "0001",
      "record_identification": "3",
      "sequence": "0001",
    },
    {
      "article_code": "1",
      "communication": {
        "address": "",
        "identification_code": "",
        "locality": "",
        "name": "BVBA.BAKKER PIET",
      },
      "communication_type": "structured",
      "detail_sequence": "0001",
      "record_identification": "3",
      "reference_number": "0007500005482",
      "sequence": "0002",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "04",
        "family_description": "Cards",
        "transaction": "80",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
    },
  ],
  "movements": [
    {
      "amount": 1767.82,
      "article_code": "3",
      "bic": "GEBCEEBB",
      "category_purpose": "",
      "communication": "112/4554/46812 813 ANOTHER MESSAGE MESSAGE",
      "communication_type": "unstructured",
      "counterparty": {
        "account": {
          "currency": "EUR",
          "number": "BE54805480215856",
        },
        "name": "BVBA.BAKKER PIET",
      },
      "customer_reference": "54875",
      "detail_sequence": "0000",
      "entry_date": 2014-12-25T00:00:00.000Z,
      "globalisation_code": "0",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "0001200002835",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "12",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
      "value_date": 2014-12-25T00:00:00.000Z,
    },
    {
      "amount": 2767.82,
      "article_code": "3",
      "bic": "GEBCEEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "112455446812",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "EUR",
          "number": "BE54805480215856",
        },
        "name": "BVBA.BAKKER PIET",
      },
      "customer_reference": "54875",
      "detail_sequence": "0000",
      "entry_date": 2014-12-25T00:00:00.000Z,
      "globalisation_code": "0",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "0001200002835",
      "sequence": "0002",
      "sequence_number": "0002",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "12",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
      "value_date": 2014-12-25T00:00:00.000Z,
    },
    {
      "amount": 1767.82,
      "article_code": "2",
      "bic": "GEBCEEBB",
      "category_purpose": "",
      "communication": "112/4554/46812 813 ANOTHER MESSAGE",
      "communication_type": "unstructured",
      "customer_reference": "54875",
      "detail_sequence": "0000",
      "entry_date": 2014-12-25T00:00:00.000Z,
      "globalisation_code": "0",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "0001200002835",
      "sequence": "0009",
      "sequence_number": "0009",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "12",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
      "value_date": 2014-12-25T00:00:00.000Z,
    },
  ],
  "trailer": {
    "credit_amount": 3967.22,
    "debit_amount": 16837.52,
    "number_of_records": 15,
    "record_identification": "9",
  },
}
`;

exports[`should parse sample file 4 1`] = `
{
  "balance": {
    "new": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "extension_zone": "",
        "number": "001548226815",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": -500012.1,
      "date": 2015-05-12T00:00:00.000Z,
      "link_code": "0",
      "record_identification": "8",
      "sequence_number": "225",
    },
    "old": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "description": "PROFESSIONAL ACCOUNT",
        "extension_zone": "",
        "name": "CODELICIOUS",
        "number": "001548226815",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 4004100,
      "coda_sequence_number": "255",
      "date": 2014-12-24T00:00:00.000Z,
      "record_identification": "1",
      "sequence_number": "155",
    },
  },
  "free_communications": [
    {
      "detail_sequence": "0005",
      "record_identification": "4",
      "sequence": "0001",
      "text": "THIS IS A PUBLIC MESSAGE",
    },
  ],
  "header": {
    "account": {
      "bic": "GEBABEBB",
      "identification_number": "09029308273",
      "name": "CODABOX S A",
    },
    "application_code": "05",
    "bank_identification_number": "201",
    "date": 2015-01-18T00:00:00.000Z,
    "duplicate": false,
    "external_application_code": "00001",
    "file_reference": "0938409934",
    "record_identification": "0",
    "related_reference": "834080",
    "transaction_reference": "984309",
    "version": 2,
  },
  "information": [
    {
      "article_code": "2",
      "communication": {
        "address": "MAIN STREET 928",
        "identification_code": "",
        "locality": "5480 SOME CITY",
        "name": "BVBA.BAKKER PIET",
      },
      "communication_type": "structured",
      "detail_sequence": "0001",
      "record_identification": "3",
      "reference_number": "0007500005482",
      "sequence": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "04",
        "family_description": "Cards",
        "transaction": "80",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
    },
    {
      "article_code": "3",
      "communication": "SOME INFORMATION ABOUT THIS TRANSACTION",
      "detail_sequence": "0001",
      "record_identification": "3",
      "sequence": "0001",
    },
    {
      "article_code": "1",
      "communication": {
        "address": "",
        "identification_code": "",
        "locality": "",
        "name": "BVBA.BAKKER PIET",
      },
      "communication_type": "structured",
      "detail_sequence": "0001",
      "record_identification": "3",
      "reference_number": "0007500005482",
      "sequence": "0002",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "04",
        "family_description": "Cards",
        "transaction": "80",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
    },
  ],
  "movements": [
    {
      "amount": -767.823,
      "article_code": "3",
      "bic": "GEBCEEBB",
      "category_purpose": "",
      "communication": "112/4554/46812 813 ANOTHER MESSAGE MESSAGE",
      "communication_type": "unstructured",
      "counterparty": {
        "account": {
          "currency": "EUR",
          "number": "BE54805480215856",
        },
        "name": "BVBA.BAKKER PIET",
      },
      "customer_reference": "54875",
      "detail_sequence": "0000",
      "entry_date": 2014-12-25T00:00:00.000Z,
      "globalisation_code": "0",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "0001200002835",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "12",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
      "value_date": 2014-12-25T00:00:00.000Z,
    },
    {
      "amount": 2767.82,
      "article_code": "3",
      "bic": "GEBCEEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "112455446812",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "EUR",
          "number": "BE54805480215856",
        },
        "name": "BVBA.BAKKER PIET",
      },
      "customer_reference": "54875",
      "detail_sequence": "0000",
      "entry_date": 2014-12-25T00:00:00.000Z,
      "globalisation_code": "0",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "0001200002835",
      "sequence": "0002",
      "sequence_number": "0002",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "12",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
      "value_date": 2014-12-25T00:00:00.000Z,
    },
    {
      "amount": 1767.82,
      "article_code": "2",
      "bic": "GEBCEEBB",
      "category_purpose": "",
      "communication": "112/4554/46812 813 ANOTHER MESSAGE",
      "communication_type": "unstructured",
      "customer_reference": "54875",
      "detail_sequence": "0000",
      "entry_date": 2014-12-25T00:00:00.000Z,
      "globalisation_code": "0",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "0001200002835",
      "sequence": "0009",
      "sequence_number": "0009",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "12",
        "transaction_description": "<Unknown>",
        "type": "0",
      },
      "value_date": 2014-12-25T00:00:00.000Z,
    },
  ],
  "trailer": {
    "credit_amount": 3967.22,
    "debit_amount": 16837.52,
    "number_of_records": 15,
    "record_identification": "9",
  },
}
`;

exports[`should parse sample file 5 1`] = `
{
  "balance": {
    "new": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "extension_zone": "",
        "number": "138536152215",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 17832.12,
      "date": 2017-10-11T00:00:00.000Z,
      "link_code": "0",
      "record_identification": "8",
      "sequence_number": "139",
    },
    "old": {
      "account": {
        "country": "BE",
        "currency": "EUR",
        "description": "KBC-Bedrijfsrekening",
        "extension_zone": "",
        "name": "BOUWBEDRIJF VOOR GROTE WER",
        "number": "138536152215",
        "qualification_code": "0",
        "type": 0,
        "type_description": "Belgian account number",
      },
      "balance": 17752120,
      "coda_sequence_number": "138",
      "date": 2017-10-10T00:00:00.000Z,
      "record_identification": "1",
      "sequence_number": "139",
    },
  },
  "free_communications": [],
  "header": {
    "account": {
      "bic": "KREDBEBB",
      "identification_number": "00330158420",
      "name": "BOUWBEDRIJF VOOR GROTE WER",
    },
    "application_code": "05",
    "bank_identification_number": "725",
    "date": 2017-10-11T00:00:00.000Z,
    "duplicate": false,
    "external_application_code": "00000",
    "file_reference": "00265207  ",
    "record_identification": "0",
    "related_reference": "",
    "transaction_reference": "",
    "version": 2,
  },
  "information": [],
  "movements": [
    {
      "amount": -75,
      "article_code": "2",
      "bic": "",
      "category_purpose": "",
      "communication": "creditTran/0000",
      "communication_type": "unstructured",
      "customer_reference": "p24t20220328122212c1",
      "detail_sequence": "0000",
      "entry_date": 2022-03-29T00:00:00.000Z,
      "globalisation_code": "1",
      "information": [
        {
          "article_code": "1",
          "communication": "UITVOERING VAN UW BESTAND/GROEP creditTran/0000",
          "communication_type": "unstructured",
          "detail_sequence": "0001",
          "record_identification": "3",
          "reference_number": "0801A3T033523",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "07",
            "transaction_description": "Collective transfer",
            "type": "1",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "0801A3T033523",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "07",
        "transaction_description": "Collective transfer",
        "type": "1",
      },
      "value_date": 2022-03-29T00:00:00.000Z,
    },
    {
      "amount": -25,
      "article_code": "3",
      "bic": "BBRUBEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "000003515846",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "BE25646548413215",
        },
        "name": "KLANT2 NAAM2",
      },
      "customer_reference": "",
      "detail_sequence": "0002",
      "entry_date": 2017-10-11T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "2",
          "communication": {
            "address": "VOETGANGERSTRAAT 26",
            "identification_code": "",
            "locality": "1215 ANTWERPEN",
            "name": "KLANT2 NAAM2",
          },
          "communication_type": "structured",
          "detail_sequence": "0002",
          "record_identification": "3",
          "reference_number": "KLIM03284DSCICDEVATVA",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "07",
            "transaction_description": "Collective transfer",
            "type": "0",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "KLIM03284DSCICDEVATVA",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "07",
        "transaction_description": "Collective transfer",
        "type": "0",
      },
      "value_date": 2017-10-11T00:00:00.000Z,
    },
    {
      "amount": -20,
      "article_code": "3",
      "bic": "KREDBEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "000003154982",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "BE32135468465432",
        },
        "name": "KLANT3 NAAM",
      },
      "customer_reference": "",
      "detail_sequence": "0003",
      "entry_date": 2017-10-11T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "2",
          "communication": {
            "address": "KLEIN WEGELKEN 1",
            "identification_code": "",
            "locality": "8423 LEUVEN",
            "name": "KLANT3 NAAM",
          },
          "communication_type": "structured",
          "detail_sequence": "0003",
          "record_identification": "3",
          "reference_number": "OL69IXSTASSCCOXSOVDGS",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "07",
            "transaction_description": "Collective transfer",
            "type": "0",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "OL69IXSTASSCCOXSOVDGS",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "07",
        "transaction_description": "Collective transfer",
        "type": "0",
      },
      "value_date": 2017-10-11T00:00:00.000Z,
    },
    {
      "amount": -30,
      "article_code": "3",
      "bic": "GEBABEBB",
      "category_purpose": "",
      "communication": {
        "type": 101,
        "type_description": "Credit transfer or cash payment with structured format communication",
        "value": "000002133131",
      },
      "communication_type": "structured",
      "counterparty": {
        "account": {
          "currency": "",
          "number": "BE23156453132168",
        },
        "name": "KLANT4 - NAAM4 MET",
      },
      "customer_reference": "",
      "detail_sequence": "0004",
      "entry_date": 2017-10-11T00:00:00.000Z,
      "globalisation_code": "0",
      "information": [
        {
          "article_code": "2",
          "communication": {
            "address": "EIKENSTRAAT 25",
            "identification_code": "",
            "locality": "2141 BRUGGE",
            "name": "KLANT4 - NAAM4 MET",
          },
          "communication_type": "structured",
          "detail_sequence": "0004",
          "record_identification": "3",
          "reference_number": "KACS00321DSCTIXEIKDVA",
          "sequence": "0001",
          "transaction_code": {
            "category": "000",
            "category_description": "Net amount",
            "family": "01",
            "family_description": "Domestic or local SEPA credit transfers",
            "transaction": "07",
            "transaction_description": "Collective transfer",
            "type": "0",
          },
        },
      ],
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "KACS00321DSCTIXEIKDVA",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "07",
        "transaction_description": "Collective transfer",
        "type": "0",
      },
      "value_date": 2017-10-11T00:00:00.000Z,
    },
  ],
  "trailer": {
    "credit_amount": 80,
    "debit_amount": 0,
    "number_of_records": 22,
    "record_identification": "9",
  },
}
`;

exports[`should parse sample file 6 1`] = `
{
  "balance": {
    "new": {
      "account": {
        "currency": "EUR",
        "number": "BE11111111111111",
        "type": 2,
        "type_description": "IBAN of the Belgian account number",
      },
      "balance": 648.56,
      "date": 2023-03-06T00:00:00.000Z,
      "link_code": "0",
      "record_identification": "8",
      "sequence_number": "006",
    },
    "old": {
      "account": {
        "currency": "EUR",
        "description": "",
        "name": "BV XXXXXXX",
        "number": "BE11111111111111",
        "type": 2,
        "type_description": "IBAN of the Belgian account number",
      },
      "balance": 1293450,
      "coda_sequence_number": "002",
      "date": 2023-03-03T00:00:00.000Z,
      "record_identification": "1",
      "sequence_number": "006",
    },
  },
  "free_communications": [],
  "header": {
    "account": {
      "bic": "GEBABEBB",
      "identification_number": "00111111111",
      "name": "BV XXXXXXX",
    },
    "application_code": "05",
    "bank_identification_number": "200",
    "date": 2023-03-06T00:00:00.000Z,
    "duplicate": false,
    "external_application_code": "00000",
    "file_reference": "          ",
    "record_identification": "0",
    "related_reference": "",
    "transaction_reference": "",
    "version": 2,
  },
  "information": [],
  "movements": [
    {
      "amount": -395.55,
      "article_code": "2",
      "bic": "",
      "category_purpose": "",
      "communication": "",
      "communication_type": "unstructured",
      "customer_reference": "ACERTA/I/03948039/230306/1",
      "detail_sequence": "0000",
      "entry_date": 2023-03-06T00:00:00.000Z,
      "globalisation_code": "1",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "2303061130436215",
      "sequence": "0001",
      "sequence_number": "0001",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "07",
        "transaction_description": "Collective transfer",
        "type": "1",
      },
      "value_date": 2023-03-06T00:00:00.000Z,
    },
    {
      "amount": -249.34,
      "article_code": "2",
      "bic": "",
      "category_purpose": "",
      "communication": "",
      "communication_type": "unstructured",
      "customer_reference": "ACERTA/I/33449300/230306/1",
      "detail_sequence": "0000",
      "entry_date": 2023-03-06T00:00:00.000Z,
      "globalisation_code": "1",
      "purpose": "",
      "r_reason": "",
      "r_transaction_type": "",
      "record_identification": "2",
      "reference_number": "2303061130435774",
      "sequence": "0002",
      "sequence_number": "0002",
      "transaction_code": {
        "category": "000",
        "category_description": "Net amount",
        "family": "01",
        "family_description": "Domestic or local SEPA credit transfers",
        "transaction": "07",
        "transaction_description": "Collective transfer",
        "type": "1",
      },
      "value_date": 2023-03-06T00:00:00.000Z,
    },
  ],
  "trailer": {
    "credit_amount": 0,
    "debit_amount": 644.89,
    "number_of_records": 6,
    "record_identification": "9",
  },
}
`;
